# ai-benchmark-suite

./: .gitignore  README.md  pyproject.toml
results/: mnist.csv  qwen2-1_5B.csv  qwen2-7B.csv
src/ai_benchmark_suite/: MyArgumentParser.py  __main__.py  device_information.py  generate_plots.py  save_information.py
src/ai_benchmark_suite/mnist/: README.md  __main__.py
src/ai_benchmark_suite/qwen2/: README.md  __main__.py
