[tool.poetry]
name = "ai-benchmark-suite"
version = "0.1.0"
description = ""
authors = ["lks-hrsch <lkshrsch2001@outlook.com>"]
readme = "README.md"
packages = [{include = "ai_benchmark_suite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
psutil = "^6.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
transformers = "^4.42.3"
accelerate = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
